--- a/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.resx
+++ b/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.resx
@@ -58,34 +58,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Property_Name" xml:space="preserve">
-    <value>Name</value>
-  </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Request</value>
+    <value>External Request</value>
   </data>
   <data name="AccusativeDisplayName" xml:space="preserve">
-    <value>Request</value>
+    <value>External Request</value>
   </data>
   <data name="CollectionDisplayName" xml:space="preserve">
-    <value>Requests</value>
+    <value>External Requests</value>
   </data>
-  <data name="Property_Number" xml:space="preserve">
-    <value>Number</value>
+  <data name="Property_Author" xml:space="preserve">
+    <value>Author</value>
   </data>
-  <data name="Property_Description" xml:space="preserve">
-    <value>Description</value>
-  </data>
-  <data name="Property_CreatedDate" xml:space="preserve">
-    <value>CreatedDate</value>
-  </data>
-  <data name="Property_Responsible" xml:space="preserve">
-    <value>Responsible</value>
-  </data>
-  <data name="ControlGroup_e895d92e2be54b78bf9e1e28cc5c5844" xml:space="preserve">
-    <value>Base</value>
+  <data name="Property_Result" xml:space="preserve">
+    <value>Result</value>
   </data>
   <data name="ControlGroup_28f2eeafce8448ebb154a0ce0df467bf" xml:space="preserve">
-    <value />
+    <value>ExternalGroup</value>
   </data>
 </root>
