--- a/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.ru.resx
+++ b/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.ru.resx
@@ -58,37 +58,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Property_Name" xml:space="preserve">
-    <value>Name</value>
-  </data>
   <data name="DisplayName" xml:space="preserve">
-    <value>Request</value>
+    <value>Внешнее обращение</value>
   </data>
   <data name="AccusativeDisplayName" xml:space="preserve">
-    <value>Request</value>
+    <value>Внешнее обращение</value>
   </data>
   <data name="CollectionDisplayName" xml:space="preserve">
-    <value>Requests</value>
+    <value>Внешние обращения</value>
   </data>
-  <data name="Property_Number" xml:space="preserve">
-    <value>Number</value>
+  <data name="Property_Author" xml:space="preserve">
+    <value>Автор</value>
   </data>
-  <data name="Property_Description" xml:space="preserve">
-    <value>Description</value>
-  </data>
-  <data name="Property_CreatedDate" xml:space="preserve">
-    <value>CreatedDate</value>
-  </data>
-  <data name="Property_Responsible" xml:space="preserve">
-    <value>Responsible</value>
-  </data>
-  <data name="ControlGroup_e895d92e2be54b78bf9e1e28cc5c5844" xml:space="preserve">
-    <value>Base</value>
-  </data>
-  <data name="ControlGroup_28f2eeafce8448ebb154a0ce0df467bf" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Property_Index" xml:space="preserve">
-    <value>Index</value>
+  <data name="Property_Result" xml:space="preserve">
+    <value>Результат</value>
   </data>
 </root>
