--- a/DirRX.HelpDesk/DirRX.HelpDesk.Shared/TypeRequest/TypeRequestSystem.ru.resx
+++ b/DirRX.HelpDesk/DirRX.HelpDesk.Shared/TypeRequest/TypeRequestSystem.ru.resx
@@ -76,4 +76,7 @@
   <data name="Property_Type" xml:space="preserve">
     <value>ТИП</value>
   </data>
+  <data name="Property_Code" xml:space="preserve">
+    <value>Код</value>
+  </data>
 </root>
